--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ pytest     = ">=8.0.0"
 pytest-cov = ">=5.0.0"
 ruff       = ">=0.4.0"
 mypy       = ">=1.10.0"
+pytest-timeout = "^2.4.0"
 
 [tool.poetry.scripts]
 metakg-build    = "metakg.cli:build_main"
